# cpp_learn

./: CMakeLists.txt  CMakePresets.json  README.org  jamroot
app/: CMakeLists.txt  commands.cpp  console.cpp  console.hpp  jamfile  main.cpp  model.cpp  model.hpp  persist.cpp  persist.hpp  view.cpp  view.hpp
app/console/: CMakeLists.txt  commands.cpp  console.cpp  console.hpp  jamfile  main.cpp
app/console/console/: commands.cpp  commands.hpp  commands.test.cpp  console.cpp  console.hpp  model.cpp  model.hpp  persist.cpp  view.cpp  view.hpp
app/console/lib/: CMakeLists.txt  commands.cpp  commands.hpp  commands.test.cpp  console.cpp  jamfile  main.test.cpp
app/dear_imgui/: CMakeLists.txt  jamfile  main.cpp
app/dear_imgui/lib/: CMakeLists.txt  dear_imgui.cpp  dear_imgui.hpp  dear_imgui.test.cpp  jamfile  main.test.cpp
lib/: CMakeLists.txt
lib/data/: CMakeLists.txt  jamfile
lib/data/data/: action.cpp  action.hpp  app.cpp  app.hpp  books.cpp  books.hpp  books.test.cpp  box.cpp  box.hpp  box.test.cpp  data.cpp  data.hpp  data.test.cpp  main.test.cpp  ostream.cpp  ostream.hpp  ostream.test.cpp  ostream_generic.cpp  ostream_generic.hpp  ostream_generic.test.cpp  ostream_std.cpp  ostream_std.hpp  reflect.cpp  reflect.hpp  serialize.cpp  serialize.hpp  serialize.test.cpp  serialize_generic.cpp  serialize_generic.hpp  serialize_std_variant.cpp  serialize_std_variant.hpp  training.cpp  training.hpp  training.test.cpp  update.cpp  update.hpp  update.test.cpp
lib/view/: CMakeLists.txt  jamfile
lib/view/view/: data.cpp  data.hpp  data.test.cpp  main.test.cpp  model.cpp  ostream.cpp  ostream.hpp  ostream.test.cpp  persist.cpp  persist.hpp  reflect.cpp  reflect.hpp  serialize.hpp
lib/voc/: CMakeLists.txt  jamfile
lib/voc/voc/: voc.cpp  voc.hpp  voc.test.cpp
