find_package(ftxui REQUIRED COMPONENTS dom screen component)
add_subdirectory(lib)
add_executable(dear_imgui_exe)
target_sources(dear_imgui_exe PRIVATE "main.cpp")
target_link_libraries(dear_imgui_exe PRIVATE lib::view ftxui::dom ftxui::screen ftxui::component)
add_test(NAME app::exe COMMAND dear_imgui_exe)
